fix problem with map on mobile

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,7 +1,6 @@
 .Map {
     width: 100vw;
     height: 100vh;
-    position: relative;
     top: 0;
     left: 0;
     border-radius: 0;
